crates/core-executor/src/tests/sql/commands/snapshots/show/query_set_variable.snap
---
source: crates/core-executor/src/tests/sql/commands/show.rs
description: "\"SHOW VARIABLES\""
info: "Setup queries: SET v1 = 'test'"
---
Ok(
    [
        "+------+-------+------+---------+",
        "| name | value | type | comment |",
        "+------+-------+------+---------+",
        "| v1   | test  | text |         |",
        "+------+-------+------+---------+",
    ],
)
