crates/core-executor/src/tests/sql/commands/snapshots/show/query_set_variable_subquery.snap
---
source: crates/core-executor/src/tests/sql/commands/show.rs
description: "\"SHOW VARIABLES\""
info: "Setup queries: SET id_threshold = (\n            SELECT COUNT(*) * 100 FROM (\n                SELECT 1 AS column1 UNION ALL SELECT 2 UNION ALL SELECT 3\n            ) AS table1\n        );"
---
Ok(
    [
        "+--------------+-------+-------+---------+",
        "| name         | value | type  | comment |",
        "+--------------+-------+-------+---------+",
        "| id_threshold | 300   | fixed |         |",
        "+--------------+-------+-------+---------+",
    ],
)
