crates/core-executor/src/tests/sql/commands/snapshots/show/query_show_columns.snap
---
source: crates/core-executor/src/tests/sql/commands/show.rs
description: "\"SHOW COLUMNS\""
---
Ok(
    [
        "+-------------------+-------------+-----------------+-----------+---------+-------+--------+------------+---------------+---------------+",
        "| table_name        | schema_name | column_name     | data_type | default | null? | kind   | expression | database_name | autoincrement |",
        "+-------------------+-------------+-----------------+-----------+---------+-------+--------+------------+---------------+---------------+",
        "| d1                | public      | id              | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| d1                | public      | name            | Utf8      |         | YES   | COLUMN |            | embucket      |               |",
        "| d2                | public      | id              | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| d2                | public      | value           | Utf8      |         | YES   | COLUMN |            | embucket      |               |",
        "| department_table  | public      | department_id   | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| department_table  | public      | department_name | Utf8      |         | YES   | COLUMN |            | embucket      |               |",
        "| departments       | public      | department_id   | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| departments       | public      | name            | Utf8      |         | YES   | COLUMN |            | embucket      |               |",
        "| employee_table    | public      | department_id   | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| employee_table    | public      | employee_id     | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| employee_table    | public      | first_name      | Utf8      |         | YES   | COLUMN |            | embucket      |               |",
        "| employee_table    | public      | last_name       | Utf8      |         | YES   | COLUMN |            | embucket      |               |",
        "| employees         | public      | department_id   | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| employees         | public      | employee_id     | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| employees         | public      | last_name       | Utf8      |         | YES   | COLUMN |            | embucket      |               |",
        "| ftable1           | public      | description     | Utf8      |         | YES   | COLUMN |            | embucket      |               |",
        "| ftable1           | public      | retail_price    | Float32   |         | YES   | COLUMN |            | embucket      |               |",
        "| ftable1           | public      | wholesale_cost  | Float32   |         | YES   | COLUMN |            | embucket      |               |",
        "| leased_bicycles   | public      | bicycle_id      | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| leased_bicycles   | public      | customer_id     | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| monthly_sales     | public      | apr             | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| monthly_sales     | public      | dept            | Utf8      |         | YES   | COLUMN |            | embucket      |               |",
        "| monthly_sales     | public      | empid           | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| monthly_sales     | public      | feb             | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| monthly_sales     | public      | jan             | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| monthly_sales     | public      | mar             | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| products          | public      | product_id      | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| products          | public      | wholesale_price | Float32   |         | YES   | COLUMN |            | embucket      |               |",
        "| quarterly_sales   | public      | amount          | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| quarterly_sales   | public      | empid           | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| quarterly_sales   | public      | quarter         | Utf8      |         | YES   | COLUMN |            | embucket      |               |",
        "| returned_bicycles | public      | bicycle_id      | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| sales             | public      | city            | Utf8      |         | YES   | COLUMN |            | embucket      |               |",
        "| sales             | public      | product_id      | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| sales             | public      | quantity        | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| sales             | public      | retail_price    | Float32   |         | YES   | COLUMN |            | embucket      |               |",
        "| sales             | public      | state           | Utf8      |         | YES   | COLUMN |            | embucket      |               |",
        "| source_table      | public      | description     | Utf8      |         | YES   | COLUMN |            | embucket      |               |",
        "| source_table      | public      | id              | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| t1                | public      | col1            | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| t2                | public      | col1            | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| target_table      | public      | description     | Utf8      |         | YES   | COLUMN |            | embucket      |               |",
        "| target_table      | public      | id              | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "+-------------------+-------------+-----------------+-----------+---------+-------+--------+------------+---------------+---------------+",
    ],
)
