crates/core-executor/src/tests/sql/commands/snapshots/show/query_show_columns_in_missing_table.snap
---
source: crates/core-executor/src/tests/sql/commands/show.rs
description: "\"SHOW COLUMNS IN missing\""
---
Err(
    "Error: Table missing not found in embucket.public",
)
