crates/core-executor/src/tests/sql/commands/snapshots/show/query_show_columns_in_table_full.snap
---
source: crates/core-executor/src/tests/sql/commands/show.rs
description: "\"SHOW COLUMNS IN embucket.public.employee_table\""
---
Ok(
    [
        "+----------------+-------------+---------------+-----------+---------+-------+--------+------------+---------------+---------------+",
        "| table_name     | schema_name | column_name   | data_type | default | null? | kind   | expression | database_name | autoincrement |",
        "+----------------+-------------+---------------+-----------+---------+-------+--------+------------+---------------+---------------+",
        "| employee_table | public      | department_id | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| employee_table | public      | employee_id   | Int32     |         | YES   | COLUMN |            | embucket      |               |",
        "| employee_table | public      | first_name    | Utf8      |         | YES   | COLUMN |            | embucket      |               |",
        "| employee_table | public      | last_name     | Utf8      |         | YES   | COLUMN |            | embucket      |               |",
        "+----------------+-------------+---------------+-----------+---------+-------+--------+------------+---------------+---------------+",
    ],
)
