crates/core-executor/src/tests/sql/commands/snapshots/show/query_show_columns_starts_with.snap
---
source: crates/core-executor/src/tests/sql/commands/show.rs
description: "\"SHOW COLUMNS IN employee_table STARTS WITH 'last_'\""
---
Ok(
    [
        "+----------------+-------------+-------------+-----------+---------+-------+--------+------------+---------------+---------------+",
        "| table_name     | schema_name | column_name | data_type | default | null? | kind   | expression | database_name | autoincrement |",
        "+----------------+-------------+-------------+-----------+---------+-------+--------+------------+---------------+---------------+",
        "| employee_table | public      | last_name   | Utf8      |         | YES   | COLUMN |            | embucket      |               |",
        "+----------------+-------------+-------------+-----------+---------+-------+--------+------------+---------------+---------------+",
    ],
)
