crates/core-executor/src/tests/sql/commands/snapshots/show/query_show_databases.snap
---
source: crates/core-executor/src/tests/sql/commands/show.rs
description: "\"SHOW DATABASES\""
---
Ok(
    [
        "+------------+----------+----------+---------------+-------------+",
        "| created_on | name     | kind     | database_name | schema_name |",
        "+------------+----------+----------+---------------+-------------+",
        "|            | embucket | STANDARD |               |             |",
        "|            | slatedb  | STANDARD |               |             |",
        "+------------+----------+----------+---------------+-------------+",
    ],
)
