crates/core-executor/src/tests/sql/commands/snapshots/show/query_show_databases_filter.snap
---
source: crates/core-executor/src/tests/sql/commands/show.rs
description: "\"SHOW DATABASES STARTS WITH 'em'\""
---
Ok(
    [
        "+------------+----------+----------+---------------+-------------+",
        "| created_on | name     | kind     | database_name | schema_name |",
        "+------------+----------+----------+---------------+-------------+",
        "|            | embucket | STANDARD |               |             |",
        "+------------+----------+----------+---------------+-------------+",
    ],
)
