crates/core-executor/src/tests/sql/commands/snapshots/show/query_show_objects_in_database.snap
---
source: crates/core-executor/src/tests/sql/commands/show.rs
description: "\"SHOW OBJECTS IN DATABASE embucket\""
---
Ok(
    [
        "+------------+-------------------+-------+---------------+--------------------+------------+------------+",
        "| created_on | name              | kind  | database_name | schema_name        | is_iceberg | is_dynamic |",
        "+------------+-------------------+-------+---------------+--------------------+------------+------------+",
        "|            | COLUMNS           | VIEW  | EMBUCKET      | INFORMATION_SCHEMA | N          | N          |",
        "|            | D1                | TABLE | EMBUCKET      | PUBLIC             | Y          | N          |",
        "|            | D2                | TABLE | EMBUCKET      | PUBLIC             | Y          | N          |",
        "|            | DATABASES         | VIEW  | EMBUCKET      | INFORMATION_SCHEMA | N          | N          |",
        "|            | DEPARTMENTS       | TABLE | EMBUCKET      | PUBLIC             | Y          | N          |",
        "|            | DEPARTMENT_TABLE  | TABLE | EMBUCKET      | PUBLIC             | Y          | N          |",
        "|            | DF_SETTINGS       | VIEW  | EMBUCKET      | INFORMATION_SCHEMA | N          | N          |",
        "|            | EMPLOYEES         | TABLE | EMBUCKET      | PUBLIC             | Y          | N          |",
        "|            | EMPLOYEE_TABLE    | TABLE | EMBUCKET      | PUBLIC             | Y          | N          |",
        "|            | FTABLE1           | TABLE | EMBUCKET      | PUBLIC             | Y          | N          |",
        "|            | LEASED_BICYCLES   | TABLE | EMBUCKET      | PUBLIC             | Y          | N          |",
        "|            | MONTHLY_SALES     | TABLE | EMBUCKET      | PUBLIC             | Y          | N          |",
        "|            | NAVIGATION_TREE   | VIEW  | EMBUCKET      | INFORMATION_SCHEMA | N          | N          |",
        "|            | PARAMETERS        | VIEW  | EMBUCKET      | INFORMATION_SCHEMA | N          | N          |",
        "|            | PRODUCTS          | TABLE | EMBUCKET      | PUBLIC             | Y          | N          |",
        "|            | QUARTERLY_SALES   | TABLE | EMBUCKET      | PUBLIC             | Y          | N          |",
        "|            | RETURNED_BICYCLES | TABLE | EMBUCKET      | PUBLIC             | Y          | N          |",
        "|            | ROUTINES          | VIEW  | EMBUCKET      | INFORMATION_SCHEMA | N          | N          |",
        "|            | SALES             | TABLE | EMBUCKET      | PUBLIC             | Y          | N          |",
        "|            | SCHEMATA          | VIEW  | EMBUCKET      | INFORMATION_SCHEMA | N          | N          |",
        "|            | SOURCE_TABLE      | TABLE | EMBUCKET      | PUBLIC             | Y          | N          |",
        "|            | T1                | TABLE | EMBUCKET      | PUBLIC             | Y          | N          |",
        "|            | T2                | TABLE | EMBUCKET      | PUBLIC             | Y          | N          |",
        "|            | TABLES            | VIEW  | EMBUCKET      | INFORMATION_SCHEMA | N          | N          |",
        "|            | TARGET_TABLE      | TABLE | EMBUCKET      | PUBLIC             | Y          | N          |",
        "|            | VIEWS             | VIEW  | EMBUCKET      | INFORMATION_SCHEMA | N          | N          |",
        "+------------+-------------------+-------+---------------+--------------------+------------+------------+",
    ],
)
