crates/core-executor/src/tests/sql/commands/snapshots/show/query_show_objects_in_schema.snap
---
source: crates/core-executor/src/tests/sql/commands/show.rs
description: "\"SHOW OBJECTS IN public\""
---
Ok(
    [
        "+------------+-------------------+-------+---------------+-------------+------------+------------+",
        "| created_on | name              | kind  | database_name | schema_name | is_iceberg | is_dynamic |",
        "+------------+-------------------+-------+---------------+-------------+------------+------------+",
        "|            | D1                | TABLE | EMBUCKET      | PUBLIC      | Y          | N          |",
        "|            | D2                | TABLE | EMBUCKET      | PUBLIC      | Y          | N          |",
        "|            | DEPARTMENTS       | TABLE | EMBUCKET      | PUBLIC      | Y          | N          |",
        "|            | DEPARTMENT_TABLE  | TABLE | EMBUCKET      | PUBLIC      | Y          | N          |",
        "|            | EMPLOYEES         | TABLE | EMBUCKET      | PUBLIC      | Y          | N          |",
        "|            | EMPLOYEE_TABLE    | TABLE | EMBUCKET      | PUBLIC      | Y          | N          |",
        "|            | FTABLE1           | TABLE | EMBUCKET      | PUBLIC      | Y          | N          |",
        "|            | LEASED_BICYCLES   | TABLE | EMBUCKET      | PUBLIC      | Y          | N          |",
        "|            | MONTHLY_SALES     | TABLE | EMBUCKET      | PUBLIC      | Y          | N          |",
        "|            | PRODUCTS          | TABLE | EMBUCKET      | PUBLIC      | Y          | N          |",
        "|            | QUARTERLY_SALES   | TABLE | EMBUCKET      | PUBLIC      | Y          | N          |",
        "|            | RETURNED_BICYCLES | TABLE | EMBUCKET      | PUBLIC      | Y          | N          |",
        "|            | SALES             | TABLE | EMBUCKET      | PUBLIC      | Y          | N          |",
        "|            | SOURCE_TABLE      | TABLE | EMBUCKET      | PUBLIC      | Y          | N          |",
        "|            | T1                | TABLE | EMBUCKET      | PUBLIC      | Y          | N          |",
        "|            | T2                | TABLE | EMBUCKET      | PUBLIC      | Y          | N          |",
        "|            | TARGET_TABLE      | TABLE | EMBUCKET      | PUBLIC      | Y          | N          |",
        "+------------+-------------------+-------+---------------+-------------+------------+------------+",
    ],
)
